2005-02-12		Florian Boor <florian.boor@kernelconcepts.de>

	* Released Version 0.5

2005-02-08		Florian Boor <florian.boor@kernelconcepts.de>

	* main.c: Add icon resize capabilities.
	          Removed some old cruft and fixed warnings.
	* Makefile: Some install fixes. 

2004-08-01		Florian Boor <florian.boor@kernelconcepts.de>
	* main.c: Removed obsolete firewall stuff.
	* Makefile: New Version: 0.5

2004-07-09		Florian Boor <florian.boor@kernelconcepts.de>
	* netlink.c: Removed include causing compile to fail in some
                     environments.

2004-06-09		Florian Boor <florian.boor@kernelconcepts.de>
	* Released V 0.4
	* Makefile: new version, removed old cruft, made oe compatible
	* TODO: New file collecting good and less good ideas.
	* main.c: Added activation of firewall rules configured by gpe-shield.
	
2004-04-17		Florian Boor <florian.boor@kernelconcepts.de>
	* main.c: Network checking code improved, we ping the gateway now.
	* Added libmb dependency to conrol.
	* Released V 0.3
	
2004-04-01		Florian Boor <florian.boor@kernelconcepts.de>
	* Rewrote dock code to use libmb.
	
2004-03-05		Florian Boor <florian.boor@kernelconcepts.de>
	* Added cool netlink using implementation by 
		Philip Blundell <philb@gnu.org>.
	
2004-03-04		Florian Boor <florian.boor@kernelconcepts.de>
	* Added messages for change events.
	* Fixed path to icon in .desktop file.
	* Removed obsolete code and includes.
	* Released V 0.2
	
2004-03-03		Florian Boor <florian.boor@kernelconcepts.de>
    * Created this project
	* made it work
	* Released V 0.1