@@ -1,3 +1,8 @@
+
+2005-08-29		Florian Boor <florian.boor@kernelconcepts.de>
+
+	* Makefile: Fix stupid Makefile issues.
+
 2005-02-12		Florian Boor <florian.boor@kernelconcepts.de>
 
 	* Released Version 0.5
